[package]
name = "passrie"
version = "0.1.0"
edition = "2021"
authors = ["SidneyZhang <zly@lyzhang.me>"]
description = "Passwords Genarator and Manager in CLI by Rust."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
passwords = "3.1.13"
